--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "package": "npm run build && electron-builder"
     },
     "dependencies": {
+        "events": "^3.3.0",
         "pouchdb-browser": "^8.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
