Convert to typescript

--- a/package.json
+++ b/package.json
@@ -21,12 +21,18 @@
 		"react-dom": "^18.3.1"
 	},
 	"devDependencies": {
+		"@types/node": "^24.2.1",
+		"@types/pouchdb-browser": "^6.1.5",
+		"@types/react": "^19.1.9",
+		"@types/react-dom": "^19.1.7",
 		"@vitejs/plugin-react": "^4.3.0",
+		"@vitejs/plugin-react-swc": "^4.0.0",
 		"concurrently": "^9.0.0",
 		"cross-env": "^7.0.3",
 		"electron": "^30.0.0",
 		"electron-builder": "^24.13.3",
 		"prettier": "^3.3.3",
+		"typescript": "^5.9.2",
 		"vite": "^5.4.0",
 		"wait-on": "^7.0.1"
 	},
