--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,38 @@
 {
 	"compilerOptions": {
-		"jsx": "react-jsx",
-		"module": "ESNext",
 		"target": "ES2020",
-		"moduleResolution": "Bundler",
+		"useDefineForClassFields": true,
+		"lib": [
+			"ES2020",
+			"DOM",
+			"DOM.Iterable"
+		],
+		"module": "ESNext",
+		"skipLibCheck": true,
+		/* Bundler mode */
+		"moduleResolution": "bundler",
+		"allowImportingTsExtensions": true,
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"noEmit": true,
+		"jsx": "react-jsx",
+		/* Linting */
+		"strict": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noFallthroughCasesInSwitch": true,
+		/* Allow JS during transition */
 		"allowJs": true,
 		"checkJs": false,
-		"strict": true,
 		"baseUrl": ".",
 		"paths": {}
 	},
-	"include": ["renderer/src/**/*"]
+	"include": [
+		"renderer/src/**/*"
+	],
+	"references": [
+		{
+			"path": "./tsconfig.node.json"
+		}
+	]
 }
