--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
 		"format:check": "prettier --check ."
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^2.8.2",
 		"events": "^3.3.0",
 		"pouchdb-browser": "^8.0.1",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"react-redux": "^9.2.0"
 	},
 	"devDependencies": {
 		"@types/node": "^24.2.1",
