--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
 	"name": "karaoke-electron",
 	"version": "0.1.0",
 	"description": "Electron + React + PouchDB starter",
-	"main": "electron/main.js",
+	"main": "dist-electron/electron/main.js",
 	"author": "",
 	"license": "MIT",
 	"scripts": {
-		"dev": "cross-env VITE_DEV_SERVER_URL=http://localhost:5173 concurrently -k \"vite\" \"wait-on http://localhost:5173 && electron --inspect .\"",
-		"dev:debug": "cross-env VITE_DEV_SERVER_URL=http://localhost:5173 concurrently -k \"vite\" \"wait-on http://localhost:5173 && electron --inspect .\"",
+		"dev": "cross-env VITE_DEV_SERVER_URL=http://localhost:5173 concurrently -k \"vite\" \"npm run build:electron && wait-on http://localhost:5173 && electron --inspect .\"",
+		"dev:debug": "cross-env VITE_DEV_SERVER_URL=http://localhost:5173 concurrently -k \"vite\" \"npm run build:electron && wait-on http://localhost:5173 && electron --inspect .\"",
 		"build": "vite build",
-		"start": "electron .",
-		"package": "npm run build && electron-builder",
+		"build:electron": "tsc -p tsconfig.node.json",
+		"build:electron:watch": "tsc -p tsconfig.node.json --watch",
+		"start": "npm run build:electron && electron .",
+		"package": "npm run build && npm run build:electron && electron-builder",
 		"format": "prettier --write .",
 		"format:check": "prettier --check ."
 	},
@@ -42,7 +44,7 @@
 		"appId": "com.example.karaoke",
 		"productName": "Karaoke Electron",
 		"files": [
-			"electron/**/*",
+			"dist-electron/**/*",
 			"dist/**/*",
 			"node_modules/**/*",
 			"package.json"
