--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,10 +2,14 @@
 	"compilerOptions": {
 		"composite": true,
 		"skipLibCheck": true,
-		"module": "ESNext",
-		"moduleResolution": "bundler",
+		"module": "CommonJS",
+		"target": "ES2020",
+		"moduleResolution": "node",
 		"allowSyntheticDefaultImports": true,
 		"strict": true,
+		"outDir": "./dist-electron",
+		"rootDir": "./",
+		"esModuleInterop": true,
 		"types": [
 			"node"
 		]
@@ -13,5 +17,8 @@
 	"include": [
 		"vite.config.mjs",
 		"electron/**/*"
+	],
+	"exclude": [
+		"electron/**/*.js"
 	]
 }
