--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"format:check": "prettier --check ."
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^7.0.0",
 		"@reduxjs/toolkit": "^2.8.2",
 		"events": "^3.3.0",
 		"pouchdb-browser": "^8.0.1",
