--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"pouchdb-browser": "^8.0.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-redux": "^9.2.0"
+		"react-redux": "^9.2.0",
+		"reselect": "^5.1.1"
 	},
 	"devDependencies": {
 		"@types/node": "^24.2.1",
