--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@fortawesome/fontawesome-free": "^7.0.0",
 		"@reduxjs/toolkit": "^2.8.2",
 		"events": "^3.3.0",
+		"ffbinaries": "^1.1.6",
 		"pouchdb-browser": "^8.0.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -28,6 +29,7 @@
 		"yt-dlp-wrap": "^2.3.12"
 	},
 	"devDependencies": {
+		"@types/ffbinaries": "^1.1.5",
 		"@types/node": "^24.2.1",
 		"@types/pouchdb-browser": "^6.1.5",
 		"@types/react": "^19.1.9",
