--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@reduxjs/toolkit": "^2.8.2",
 		"events": "^3.3.0",
 		"ffbinaries": "^1.1.6",
+		"pouchdb": "^9.0.0",
 		"pouchdb-browser": "^8.0.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -31,6 +32,7 @@
 	"devDependencies": {
 		"@types/ffbinaries": "^1.1.5",
 		"@types/node": "^24.2.1",
+		"@types/pouchdb": "^6.4.2",
 		"@types/pouchdb-browser": "^6.1.5",
 		"@types/react": "^19.1.9",
 		"@types/react-dom": "^19.1.7",
